feat: create 5.40.6 release notes

--- a/docs/release-notes/5.40.6/changelog.mdx
+++ b/docs/release-notes/5.40.6/changelog.mdx
@@ -6,16 +6,24 @@ description: See what's new in Webiny version 5.40.6.
 
 import gqlTooltipsIssue from "./assets/gql-tooltips-issue.png";
 import fmTags from "./assets/fm-tags.png";
-
+import stModel1 from "./assets/st-model-1.png";
+import stModel2 from "./assets/st-model-2.png";
 
 <GithubRelease version={"5.40.6"} />
 
 
 ## Headless CMS
 
-### Singleton Models
+### Introducing Single Entry Models ([#4228](https://github.com/webiny/webiny-js/pull/4275) [#4298](https://github.com/webiny/webiny-js/pull/4298) [#4296](https://github.com/webiny/webiny-js/pull/4296))
 
-✍️
+With this release, we're introducing a new feature called **Single Entry Models**. 
+
+As the name itself suggests, this feature allows users to create a model that can only have a single entry. This can be useful in various scenarios, such as when you need to create a model that represents a configuration, a settings object, or any other type of data that should only have a single entry.
+
+<Gallery>
+  <Image src={stModel1} title={"Creating a Single Entry Model"} />
+  <Image src={stModel2} title={"Single Entry Model Content Entry Form"} />
+</Gallery>
 
 ### Deleting Entry Revision Incorrectly Moves Entire Entry to Trash ([#4275](https://github.com/webiny/webiny-js/pull/4275))
 
