feat: create 5.40.6 release notes

--- a/docs/release-notes/5.40.6/changelog.mdx
+++ b/docs/release-notes/5.40.6/changelog.mdx
@@ -8,6 +8,7 @@ import gqlTooltipsIssue from "./assets/gql-tooltips-issue.png";
 import fmTags from "./assets/fm-tags.png";
 import stModel1 from "./assets/st-model-1.png";
 import stModel2 from "./assets/st-model-2.png";
+import stModel3 from "./assets/st-model-3.png";
 
 <GithubRelease version={"5.40.6"} />
 
@@ -20,10 +21,18 @@ With this release, we're introducing a new feature called **Single Entry Models*
 
 As the name itself suggests, this feature allows users to create a model that can only have a single entry. This can be useful in various scenarios, such as when you need to create a model that represents a configuration, a settings object, or any other type of data that should only have a single entry.
 
+The new feature can be accessed within the **New Content Model** dialog, where you can now specify whether the model should be a single entry model or not. 
+
+Once created, we proceed with defining the fields for the model, just like we would for any other model. The only difference is that, with single entry models, there can only be one entry of a given model, which is actually created automatically when the model is created.
+
+The entry can be accessed as any other entry, via the Headless CMS section in the main menu.
+
 <Gallery>
   <Image src={stModel1} title={"Creating a Single Entry Model"} />
-  <Image src={stModel2} title={"Single Entry Model Content Entry Form"} />
+  <Image src={stModel2} title={"Accessing the Single Entry"} />
+  <Image src={stModel3} title={"Content Entry Form"} />
 </Gallery>
+
 
 ### Deleting Entry Revision Incorrectly Moves Entire Entry to Trash ([#4275](https://github.com/webiny/webiny-js/pull/4275))
 
