feat: create 5.40.6 release notes

--- a/docs/release-notes/5.40.6/changelog.mdx
+++ b/docs/release-notes/5.40.6/changelog.mdx
@@ -15,7 +15,7 @@ import stModel3 from "./assets/st-model-3.png";
 
 ## Headless CMS
 
-### Introducing Single Entry Models ([#4228](https://github.com/webiny/webiny-js/pull/4275) [#4298](https://github.com/webiny/webiny-js/pull/4298) [#4296](https://github.com/webiny/webiny-js/pull/4296))
+### Introducing Single Entry Models (Beta) ([#4228](https://github.com/webiny/webiny-js/pull/4275) [#4298](https://github.com/webiny/webiny-js/pull/4298) [#4296](https://github.com/webiny/webiny-js/pull/4296))
 
 With this release, we're introducing a new feature called **Single Entry Models**. 
 
@@ -33,6 +33,11 @@ The entry can be accessed as any other entry, via the Headless CMS section in th
   <Image src={stModel3} title={"Content Entry Form"} />
 </Gallery>
 
+<Alert type={"info"}>
+
+  As this feature is still in beta, we'd love to hear your feedback on it. If you have any suggestions or ideas on how we could improve it, please let us know by creating a new issue in our [GitHub repository](https://www.github.com/webiny/webiny-js), or by reaching out to us on our [Slack channel](https://www.webiny.com/slack).
+
+</Alert>
 
 ### Deleting Entry Revision Incorrectly Moves Entire Entry to Trash ([#4275](https://github.com/webiny/webiny-js/pull/4275))
 
