--- a/docs/release-notes/5.40.6/changelog.mdx
+++ b/docs/release-notes/5.40.6/changelog.mdx
@@ -23,7 +23,7 @@ As the name itself suggests, this feature allows users to create a model that ca
 
 The new feature can be accessed within the **New Content Model** dialog, where you can now specify whether the model should be a single entry model or not. 
 
-Once our model is created, we can proceed by defining its fields, and, ultimately, by navigating to the single content entry (which is automatically created for us).  
+Once the model is created, we can proceed by defining its fields, and, ultimately, by navigating to the single content entry (which is automatically created for us).  
 
 The entry can be accessed as any other entry, via the Headless CMS section in the main menu.
 
