feat: create 5.41.0 docs

--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -1,5 +1,5 @@
 ---
-id: a48ce641
+id: bd1e3140
 title: Webiny 5.41.0 Changelog
 description: See what's new in Webiny version 5.41.0.
 ---
@@ -17,5 +17,15 @@ import { GithubRelease } from "@/components/GithubRelease";
 ## Security
 
 ### Assigning Users To Multiple Teams ([#4198](https://github.com/webiny/webiny-js/pull/3976))
+
+✍️
+
+### Programmatic Creation of Roles and Teams ([#4303](https://github.com/webiny/webiny-js/pull/4303))
+
+✍️
+
+## Development
+
+### Introducing The New Watch Command (Local AWS Lambda Development) ([#4185](https://github.com/webiny/webiny-js/pull/4185))
 
 ✍️
