feat: create 5.41.0 docs

--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -5,6 +5,7 @@ description: See what's new in Webiny version 5.41.0.
 ---
 
 import { GithubRelease } from "@/components/GithubRelease";
+import copySecurityPermissions from "./assets/copy-security-permissions.png";
 
 <GithubRelease version={"5.41.0"} />
 
@@ -24,8 +25,14 @@ import { GithubRelease } from "@/components/GithubRelease";
 
 ✍️
 
+### Copy Security Permissions Object ([#4303](https://github.com/webiny/webiny-js/pull/4303))
+
+✍️
+
+<Image src={copySecurityPermissions} alt="Copy Security Permissions" />
+
 ## Development
 
-### Introducing The New Watch Command (Local AWS Lambda Development) ([#4185](https://github.com/webiny/webiny-js/pull/4185))
+### `beta` Introducing The New Watch Command (Local AWS Lambda Development) ([#4185](https://github.com/webiny/webiny-js/pull/4185))
 
 ✍️
