feat: create 5.41.0 docs

--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -6,6 +6,7 @@ description: See what's new in Webiny version 5.41.0.
 
 import { GithubRelease } from "@/components/GithubRelease";
 import copySecurityPermissions from "./assets/copy-security-permissions.png";
+import multiRolesTeams from "./assets/multi-roles-teams.png";
 
 <GithubRelease version={"5.41.0"} />
 
@@ -19,21 +20,26 @@ import copySecurityPermissions from "./assets/copy-security-permissions.png";
 
 ### Assigning Users To Multiple Teams ([#4198](https://github.com/webiny/webiny-js/pull/3976))
 
-✍️
+Prior to this release, Webiny users would only be able to possess one role, and also be assigned to one team. With this release, both of these limitations have been removed, and users can now be assigned to multiple teams, and possess multiple roles.
+
+<Image src={multiRolesTeams} alt="Assigning Users To Multiple Teams" />
+
 
 ### Programmatic Creation of Roles and Teams ([#4303](https://github.com/webiny/webiny-js/pull/4303))
 
-✍️
+With this release, we've added the ability to programmatically create roles and teams. This is especially useful when you need to create a large number of roles and teams, and you don't want to do it manually.
+
+To learn more, head over to the new [Programmatically Create Roles and Teams](/docs/core-development-concepts/security-framework/programmatically-create-roles-and-teams) article.
 
 ### Copy Security Permissions Object ([#4303](https://github.com/webiny/webiny-js/pull/4303))
 
-✍️
+In order to make programmatic creation of roles and defining its permissions a bit easier, in the Roles and API Keys forms, we've introduced the "Copy as JSON" button. This button allows you to copy the entire security permissions object as a JSON string, which you can then use in your code.
 
 <Image src={copySecurityPermissions} alt="Copy Security Permissions" />
 
 ## Development
 
-### `beta` Introducing The New Watch Command (Local AWS Lambda Development) ([#4185](https://github.com/webiny/webiny-js/pull/4185))
+### `beta-feature-tag` Introducing The New Watch Command (Local AWS Lambda Development) ([#4185](https://github.com/webiny/webiny-js/pull/4185))
 
 From the early days, in order to perform both backend and frontend development, Webiny users would use the [`webiny watch`](/docs/core-development-concepts/basics/watch-command) command. And while this command works fine when it comes to frontend development (Admin, public website), we've come to a conclusion that it's not the best solution for backend development. 
 
