feat: create 5.41.0 docs

--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -18,12 +18,17 @@ import multiRolesTeams from "./assets/multi-roles-teams.png";
 
 ## Security
 
-### Assigning Users To Multiple Teams ([#4198](https://github.com/webiny/webiny-js/pull/3976))
+### Multiple Roles and Teams Assignments ([#4198](https://github.com/webiny/webiny-js/pull/3976))
 
 Prior to this release, Webiny users would only be able to possess one role, and also be assigned to one team. With this release, both of these limitations have been removed, and users can now be assigned to multiple teams, and possess multiple roles.
 
 <Image src={multiRolesTeams} alt="Assigning Users To Multiple Teams" />
 
+<Alert type="info">
+
+  Note that the Teams feature is part of our enterprise offering. To learn more, please check out the [Teams](/docs/enterprise/aacl/teams) article.   
+
+</Alert>
 
 ### Programmatic Creation of Roles and Teams ([#4303](https://github.com/webiny/webiny-js/pull/4303))
 
