feat: create 5.41.0 docs

--- a/docs/developer-docs/5.41.x/core-development-concepts/security-framework/programmatically-create-roles-and-teams.mdx
+++ b/docs/developer-docs/5.41.x/core-development-concepts/security-framework/programmatically-create-roles-and-teams.mdx
@@ -1,11 +1,13 @@
 ---
 id: 070aa2ee
-title: Programmatic Creation of Roles and Teams
+title: Programmatically Create Roles and Teams
 description: Learn how to define roles and teams programmatically.
 ---
 
 import { Alert } from "@/components/Alert";
 import { WhatYouWillLearn } from "@/components/WhatYouWillLearn";
+import rolesModule from "./assets/programmatically-create-roles-and-teams/roles-module.png";
+import teamsModule from "./assets/programmatically-create-roles-and-teams/teams-module.png";
 
 <WhatYouWillLearn>
   
@@ -21,11 +23,20 @@ Roles and teams can be defined in two ways.
 
 The most straightforward way to define roles and teams would be via the Admin Area application, via the Roles and Teams modules. This is especially suitable for users that are not developers, and just want to manage everything in a quick and easy way.
 
-<!-- ![Defining Roles and Teams via the Admin Area Application](./assets/content-models-plugins/content-models-group-editor.png) -->
+<Gallery>
+  <Image src={rolesModule} title={"Roles Module"} />
+  <Image src={teamsModule} title={"Teams Module"} />
+</Gallery>
+
+<Alert type="info">
+
+  Note that the Teams feature is part of our enterprise offering. To learn more, please check out the [Teams](/docs/enterprise/aacl/teams) article.   
+
+</Alert>
 
 ### Programmatically
 
-And although we can get pretty far by defining roles and teams via the Admin Area, on the other hand, we can also do this within our application code, by creating a new extension. Once defined, roles and teams can be then used via the Admin Area in the same way as if they were created regularly, via the Role Editor.
+And although we can get pretty far by defining roles and teams via the Admin Area, on the other hand, we can also do this programmatically, by creating a new [extension](/docs/{version}/core-development-concepts/basics/extensions). Once defined, roles and teams can be then used via the Admin Area in the same way as if they were created regularly, via the Role Editor.
 
 Some of the benefits of this approach are:
 
@@ -65,11 +76,10 @@ export const createExtension = () => {
 
 As we can see, first we define a new team via the `createSecurityRolePlugin` plugin factory. The following properties are required:
 
-- `id` - a unique identifier of the team
-- `name` - the name of the team
-- `description` - a short description of the team
-- `slug` - a unique identifier of the team, used in URLs
-- `icon` - the icon of the team (more info in the [FAQ](#what-are-the-values-that-i-can-pass-to-the-icon-property-of-the-cms-group-plugin-plugin) section)
+- `id` - a unique identifier of the role
+- `name` - the name of the role
+- `description` - a short description of the role
+- `permissions` - an array of permissions that the role provides
 
 Furthermore, upon calling the `createSecurityRolePlugin` plugin factory, we get to define all of our role's properties, like its name, ID (`modelId`), a team to which it belongs to, and most importantly, all of the fields that it consists of.
 
