feat: create 5.41.0 docs

--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -26,7 +26,7 @@ Prior to this release, Webiny users would only be able to possess one role, and 
 
 <Alert type="info">
 
-  Note that the Teams feature is part of our enterprise offering. To learn more, please check out the [Teams](/docs/enterprise/aacl/teams) article.   
+  Note that the Teams feature is part of Webiny's enterprise offering. To learn more, please check out the [Teams](/docs/enterprise/aacl/teams) article.   
 
 </Alert>
 
@@ -98,4 +98,20 @@ We hope you'll find this new feature useful, and we're looking forward to hearin
 
 </Alert>
 
- 
+## Enterprise
+
+### Audit Logs - Now Working Properly With Multi-theme Setup ([#4318](https://github.com/webiny/webiny-js/pull/4318))
+
+Because of an internal code issue, in Webiny projects that were using multiple themes, the Audit Logs module in Admin Area would break. This issue has now been fixed, and Audit Logs are now working properly in multi-theme setups.
+
+<Alert type="info">
+
+  Note that the Audit Logs feature is part of Webiny's enterprise offering. To learn more, please check out the [Teams](/docs/enterprise/aacl/teams) article.   
+
+</Alert>
+
+<Alert type="info">
+
+  In case you missed it, via the [Theme Manager](/docs/enterprise/theme-manager) application, users can create multiple themes that are used to style websites created with the Page Builder application.  
+
+</Alert>
